# molecule_search_nmr

./: setup.cfg
molecule_search_nmr/: search.py
workflows/: example.py
