[metadata]
name = molecule_search_nmr
author = Kwon, Youngchun and Lee, Dongseon and Choi, Youn-Suk and Kang, Seokho
description = Molecule search NMR
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering :: Chemistry
    Programming Language :: Python :: 3

[options]
packages = find:
setup_requires = pytest-runner; flake8
install_requires =
    numpy
    scipy
tests_require = pytest

[aliases]
test=pytest
